<resources>
    <string name="app_name">Builds Wakfu</string>
    <string name="propaganda">Your application to create Builds</string>
    <string name="banner_ad_unit_id">ca-app-pub-9806703878082584/1615165359</string>
    <string name="buildselected">Build Selected</string>
    <string name="buildsendtotop">Build Published</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="menu1">Search</string>
    <string name="menu2">Builds</string>
    <string name="menu3">Add</string>
    <string name="menu4">Import</string>
    <string name="classe">Class:</string>
    <string name="nome">Name:</string>
    <string name="txnivel">Level:</string>
    <string name="elementp">Elemental Priority:</string>
    <string name="resistp">Resistence Priority:</string>
    <string name="criar">Create</string>
    <string name="limpar">Clear</string>
    <string name="cancelar">Cancel</string>
    <string name="effects">Effects</string>
    <string name="condition">Conditions</string>
    <string name="passive">Passive</string>
    <string name="set">Set</string>
    <string name="and">and</string>
    <string name="createbuildsucess">Sucess on create Build!</string>
    <string name="errornamesame">Builds can\'t have same name.</string>
    <string name="backmsg">"Tap back again to exit"</string>
    <string name="select_lang">Select Language</string>
    <string-array name="viewpoints">
        <item>Int</item>
        <item>Str</item>
        <item>Agi</item>
        <item>Luck</item>
        <item>Mjr</item>
    </string-array>
    <string-array name="screens">
        <item>Search</item>
        <item>Builds</item>
        <item>Top Builds</item>
        <item>Setting</item>
    </string-array>
    <string-array name="viewscreens">
        <item>Build</item>
        <item>Points</item>
        <item>Decks</item>
    </string-array>
    <string-array name="deckscreens">
        <item>Actives</item>
        <item>Passives</item>
    </string-array>
    <string name="aceitar">Accept</string>
    <string name="deck_actives">Actives</string>
    <string name="deck_passives">Passives</string>
    <string name="elemental_spells">Elemental Spells</string>
    <string name="active_spells">Active Spells</string>
    <string name="passive_spells">Passive Spells</string>
    <string name="publishtittle">Send to Top Builds</string>
    <string name="offline">You are offline =(</string>
    <string name="remove">Remove</string>
    <string name="mostraitem">Item</string>
    <string name="welcome">Welcome </string>
    <string name="loginfail">Offline</string>
    <string name="publishmessage">Publish in Top Builds: \n Set this build public for all users. \n Your name will be visible in Build. \n Only you can delete the build. \n\n Publish in Top Builds?</string>
    <string name="pontossalvos">points saved successfully</string>
    <string name="save">Save</string>
    <string name="major">Major</string>
    <string name="chance">Chance</string>
    <string name="agility">Agility</string>
    <string name="strength">Strength</string>
    <string name="intelligence">Intelligence</string>
    <string name="option_health_percent">% Health Points</string>
    <string name="option_eleres">Elemental Resistance</string>
    <string name="option_barrier">Barrier</string>
    <string name="option_heal_receive">% Heals received</string>
    <string name="option_armorperlife">% Armor Health Points</string>
    <string name="option_lock">Lock</string>
    <string name="option_dodge">Dodge</string>
    <string name="option_ele_mastery">Elemental Mastery</string>
    <string name="option_single_mastery">Single Target Mastery</string>
    <string name="option_area_mastery">Area Mastery</string>
    <string name="option_cac_mastery">Close Combat Mastery</string>
    <string name="option_distance_mastery">Distance Mastery</string>
    <string name="option_health_points">Health Points</string>
    <string name="option_iniciative">Iniciative</string>
    <string name="option_lockanddodge">Lock and Dodge</string>
    <string name="option_apandmpremoval">% AP and MP removal</string>
    <string name="option_apandmpresist">% AP and MP resistance</string>
    <string name="option_criticalchance">% Critical Hit</string>
    <string name="option_block">% Block</string>
    <string name="option_criticaldmg">Critical Mastery</string>
    <string name="option_rear">Rear Mastery</string>
    <string name="option_berserk">Berserk Mastery (HP &#60;50%)</string>
    <string name="option_healingmastery">Healing Mastery</string>
    <string name="option_rearres">Rear Resistance</string>
    <string name="option_criticalres">Critical Resistance</string>
    <string name="option_ap">Action Point</string>
    <string name="option_mp">Movement Point and Damage</string>
    <string name="option_rangeanddmg">Range and Damage</string>
    <string name="option_wakfu">Wakfu Point</string>
    <string name="option_controlanddmg">Control and Damage</string>
    <string name="option_finaldmg">% Damage inflicted</string>
    <string name="option_resmjr">Elemental Resist</string>
    <string name="points_to_dist">Points to distribute:</string>
    <string name="addbuildsucess">Sucess on add Build!</string>
    <string name="wait">Wait...</string>
    <string name="adicionando">Adding Itens and Spells...</string>
    <string name="permsok">Permission Granted!</string>
    <string name="permsnok">Permission Denied!</string>
    <string name="imagesaved">Image Saved!</string>
    <string name="scan_code">Scan the Builds Wakfu Code!</string>
    <string name="send_to">Send To...</string>
    <string name="codenotok">This code not is from Builds Wakfu</string>
    <string name="sobreconteudo">Created by Rodrigo Dias\nLibs and API used:\n\nPicasso\nPOI\nZxing</string>
    <string name="maestria">Mastery</string>
    <string name="batalha">Battle</string>
    <string name="Secundario">Secondary</string>
    <string name="pv">HP</string>
    <string name="pa">AP</string>
    <string name="pm">MP</string>
    <string name="pw">WP</string>
    <string name="danofinal">Damage inflicted</string>
    <string name="curas">Heals performed</string>
    <string name="golpecritico">Critical Hits</string>
    <string name="parada">Block</string>
    <string name="iniciativa">Initiative</string>
    <string name="alcance">Range</string>
    <string name="esquiva">Dodge</string>
    <string name="bloqueio">Lock</string>
    <string name="sabedoria">Wisdom</string>
    <string name="prospecção">Prospecting</string>
    <string name="controle">Control</string>
    <string name="arteequipar">Kit Skill</string>
    <string name="danocritico">Critical Mastery</string>
    <string name="rescritica">Critical Resistance</string>
    <string name="dominiocostas">Rear Mastery</string>
    <string name="rescostas">Rear Resistance</string>
    <string name="dominiocac">Melee Mastery</string>
    <string name="dominiodistancia">Distance Mastery</string>
    <string name="dominioalvounico">Single Target Mastery</string>
    <string name="dominiozona">Area Mastery</string>
    <string name="dominiocura">Healing Mastery</string>
    <string name="dominiobeserk">Berserk Mastery</string>
    <string-array name="stats">
        <item>All</item>
        <item>AP</item>
        <item>MP</item>
        <item>Range</item>
        <item>Control</item>
        <item>Health Points</item>
        <item>Elemental Mastery</item>
        <item>Heals</item>
        <item>Lock</item>
        <item>Critical Hit</item>
        <item>Rear Mastery</item>
        <item>Distance Mastery</item>
        <item>Melee Mastery</item>
        <item>Area Mastery</item>
        <item>Single Target Mastery</item>
        <item>Mastery to 1 random elements</item>
        <item>Mastery to 2 random elements</item>
        <item>Mastery to 3 random elements</item>
        <item>Mastery Water</item>
        <item>Mastery Fire</item>
        <item>Mastery Earth</item>
        <item>Mastery Air</item>
        <item>Dodge</item>
        <item>Critical Mastery</item>
        <item>Iniciative</item>
        <item>Block</item>
        <item>Prospecting</item>
        <item>Wisdom</item>
        <item>WP Max</item>
        <item>Resistence</item>
        <item>Resistance to 1 random elements</item>
        <item>Resistance to 2 random elements</item>
        <item>Resistance to 3 random elements</item>
        <item>Resistence Water</item>
        <item>Resistence Fire</item>
        <item>Resistence Earth</item>
        <item>Resistence Air</item>
        <item>Rear Resistence</item>
        <item>Critical Resistance</item>
        <item>MP removal Resistence</item>
        <item>AP removal Resistence</item>
        <item>WP</item>
        <item>Stats</item>
        <item>Health Points (PVP)</item>
        <item>Kit Skill</item>
        <item>Lvl. to spells Water</item>
        <item>Lvl. to spells Fire</item>
        <item>Lvl. to spells Earth</item>
        <item>Lvl. to spells Air</item>
        <item>Lvl. to spells</item>
        <item>Moving Speed</item>
    </string-array>
    <string name="excluir">Delete</string>
    <string name="view_nivel">Lv. </string>
    <string name="deletemsg">Do you want to delete this build?</string>
    <string name="deletebuildsucess">Build successfully deleted!</string>
    <string name="share_import">Import</string>
    <string name="share_date">Date:</string>
    <string name="action_settings">Settings</string>
    <string name="idioma">Language:</string>
    <string name="pvpoption">Hide pvp items</string>
    <string name="sobre">About</string>
    <string name="fechar">Close</string>
    <string name="cra">Cra</string>
    <string name="eca">Ecaflip</string>
    <string name="elio">Eliotrope</string>
    <string name="eni">Eniripsa</string>
    <string name="enu">Enutrof</string>
    <string name="feca">Feca</string>
    <string name="hupp">Huppermage</string>
    <string name="iop">Iop</string>
    <string name="osa">Osamodas</string>
    <string name="panda">Pandawa</string>
    <string name="lad">Rogue</string>
    <string name="sac">Sacrier</string>
    <string name="sad">Sadida</string>
    <string name="sram">Sram</string>
    <string name="steamer">Foggernaut</string>
    <string name="xelor">Xelor</string>
    <string name="zob">Masqueraider</string>
    <string name="todos">All</string>
    <string name="comun">Common</string>
    <string name="incomum">Unusual</string>
    <string name="raro">Rare</string>
    <string name="mitico">Mythical</string>
    <string name="lend">Legendary</string>
    <string name="reliq">Relic</string>
    <string name="epic">Epique</string>
    <string name="pvp">PVP</string>
    <string name="amu">Amulet</string>
    <string name="cap">Cloak</string>
    <string name="elm">Helmet</string>
    <string name="cint">Belt</string>
    <string name="drag">Epaulettes</string>
    <string name="anel">Rings</string>
    <string name="bot">Boots</string>
    <string name="w1h">One-handed Weapons</string>
    <string name="w2h">Two-handed Weapons</string>
    <string name="wsec">Second Hand</string>
    <string name="pet">Pets</string>
    <string name="pei">Breastplace</string>
    <string name="ins">Insignia</string>
    <string name="montaria">Mounts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="trocaitem">Trade of Item</string>
    <string name="deletebuild">Delete</string>
    <string name="sharebuild">Share</string>
    <string name="tiraitem">Remove Item</string>
    <string name="nivel">Level</string>
    <string name="noStats">Without Stats</string>
    <string name="posWP">WP</string>
    <string name="ate">to</string>
    <string name="pretroca">You are with item: </string>
    <string name="postroca">Want change to: </string>
</resources>