<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    android:background="@color/colorPrimaryDark"
    tools:context="com.rodrigoad.rodso.wakfustats.Layouts.CreateBuildFragment">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grid_MainActivity.build"
        android:columnCount="1"
        android:rowCount="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blank"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/txclass"
                android:text="@string/classe"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerclass"
                android:layout_toRightOf="@+id/txclass">
            </Spinner>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/colorPrimaryDark"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blank"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:layout_centerVertical="true"
                android:id="@+id/txvnome"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txvnome"
                android:id="@+id/txNome"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/colorPrimaryDark"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blank"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/txnivel"
                android:id="@+id/txnivel"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txnivel"
                android:text="200"
                android:textAlignment="center"
                android:id="@+id/Numberpickerlevel">

            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/colorPrimaryDark"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blank">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elementp"
                android:id="@+id/elementp"
                android:layout_centerVertical="true"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/elementp"
                android:id="@+id/spinnerelementp"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/colorPrimaryDark"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blank">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resistp"
                android:id="@+id/resistp"
                android:layout_centerVertical="true"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/resistp"
                android:id="@+id/spinnerresistp"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/colorPrimaryDark"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCancel"
                android:text="@string/cancelar"
                android:padding="6dp"
                android:background="@drawable/circle"
                android:textColor="@color/blank"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnLimpar"
                android:layout_toRightOf="@id/btnCancel"
                android:padding="6dp"

                android:layout_marginLeft="15dp"
                android:textColor="@color/blank"
                android:text="@string/limpar"
                android:background="@drawable/circle"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCriar"
                android:text="@string/criar"
                android:layout_toRightOf="@+id/btnLimpar"
                android:padding="6dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/circle"
                android:textColor="@color/blank"/>



        </RelativeLayout>

    </GridLayout>

</FrameLayout>
