<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frag_search_screen"
    tools:context="com.buildswakfu.rodrigo.buildswakfu.Layouts.SearchScreenFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/propaganda">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rlrv"
            android:layout_below="@+id/adView">

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:id="@+id/recyclerview">

            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/relativemain"
            android:elevation="2dp"
            android:layout_alignParentBottom="true">

            <GridLayout
                android:layout_width="match_parent"
                android:id="@+id/grid_topsv"
                android:layout_height="wrap_content"
                android:rowCount="3"
                android:columnCount="1"
                android:background="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rlsearch">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:id="@+id/txnivelleft"
                        android:text="@string/nivel"
                        android:layout_toLeftOf="@+id/numberpickerleft"/>

                    <NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:id="@+id/numberpickerleft"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@+id/txnivelate">

                    </NumberPicker>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"

                        android:id="@+id/txnivelate"
                        android:text="@string/ate"
                        android:layout_centerHorizontal="true"/>

                    <NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/txnivelate"
                        android:id="@+id/numberpickerright">

                    </NumberPicker>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/numberpickerright"
                        android:id="@+id/procurar_button"
                        android:background="@color/colorPrimary"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_search_black_18dp"/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="6dp"
                        android:layout_alignParentRight="true"
                        android:id="@+id/morebutton"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/ic_add_white_18dp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/rlstats">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:paddingLeft="2dp"
                        android:paddingRight="2dp"
                        android:layout_height="wrap_content"
                        android:weightSum="1"
                        android:id="@+id/rlspinners">

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:id="@+id/spinnerRaridade"/>

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:id="@+id/spinnerTipo"/>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rlspinners">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="6dp"
                            android:layout_centerVertical="true"
                            android:id="@+id/txstats"
                            android:text="@string/stats"/>

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:paddingRight="6dp"
                            android:id="@+id/spinnerstats"
                            android:layout_toRightOf="@+id/txstats">

                        </Spinner>

                    </RelativeLayout>

                </RelativeLayout>

            </GridLayout>

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>
